ICL_Project-main/BASE-0/Evaluator.jj
PARSER_BEGIN(Evaluator)


/** ID lister. */
public class Evaluator {

  /** Main entry point. */
  public static void main(String args[]) {
    Evaluator evaluator = new Evaluator(System.in);
    ASTNode exp;

    while (true) {
	    try {
		    exp = evaluator.Start();
		    System.out.println( exp.eval() );
	    }
	    catch (Exception e) {
		    System.out.println ("Syntax Error!");
		    evaluator.ReInit(System.in);
	    }
    }
  }

}

PARSER_END(Evaluator)

SKIP :
{
  " "
| "\t"
| "\r"
| < "//" (~ ["\n","\r"])* ("\n"|"\r") >
}

TOKEN :
{
  < Id: ["a"-"z","A"-"Z"] ( ["a"-"z","A"-"Z","0"-"9"] )* >
  |
  < Num: (["0"-"9"]) + >
  |
  < PLUS : "+" >
  |
  < MINUS : "-">
  |
  < TIMES : "*">
  |
  < DIV : "/">
  |
  < LPAR : "(" >
  |
  < RPAR : ")" >
  |
  < EL: "\n" >
  |
  ":="
}

ASTNode Start():
{ ASTNode t; }
{
   t = Exp() <EL>
   { return t; }
}

ASTNode Exp() :
{ Token op;
  ASTNode t1, t2; }
{
     LOOKAHEAD(2) < Id > ":=" Exp()
    | 
     t1=Term() ( ( op=<PLUS> | op=<MINUS> ) t2=Term() 
                 { if (op.kind == PLUS) 
                         t1 = new ASTPlus(t1,t2);
                   else  t1 = new ASTSub(t1,t2);
                 } 
               ) *
     { return t1; } 
}

ASTNode Term() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = Fact() ( ( op=<TIMES> | op=<DIV> ) t2 = Term() 
 		 { if (op.kind == TIMES) 
                         t1 = new ASTMult(t1,t2);
                   else  t1 = new ASTDiv(t1,t2);
                 }  
		)?
     { return t1; } 
}


ASTNode Fact() :
{ Token n; 
  ASTNode t;}
{
   ( n=<Num> { t = new ASTNum(Integer.parseInt(n.image)); } | <LPAR> t=Exp() <RPAR> )
   { return t; }
}
